--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
     <version>2.5</version>
 </dependency>
 </dependencies>
+  <dependency>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>docker-workflow</artifactId>
+    <version>1.28</version>
+</dependency>
 <distributionManagement>
   <repository>
     <id>releases</id>
